--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="container clearfix">
             <div class="logo"><img src="logo.jpg" alt="Shahanur Alam"></div>
             <div class="menu">
-                <a href="index.html">Home</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
-                <a href="login.html">Log In</a>
-                <a href="signup.html">Sign Up</a>
+                <a href="index.html" target="_blank">Home</a>
+                <a href="about.html" target="_blank">About</a>
+                <a href="contact.html" target="_blank">Contact</a>
+                <a href="login.html" target="_blank">Log In</a>
+                <a href="signup.html" target="_blank">Sign Up</a>
             </div>
         </div>
     </header>
