--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <h1>Welcome to Shahanur's Dairy</h1>
 
         <div class="main-content">
-            <img src="shahanur.jpg" alt="Shahanur Alam" title="Nur">
+            <img class="profile" src="shahanur.jpg" alt="Shahanur Alam" title="Nur">
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget turpis ut nulla posuere aliquet.
                 Sed vitae consectetur mi. Proin vestibulum fermentum orci, vel malesuada libero cursus ut.
