--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
         <div class="container clearfix">
-            <div class="logo"><img src="logo.jpg" alt="Shahanur Alam"></div>
+            <div class="logo"><img src="logo.png" alt="Shahanur Alam"></div>
             <div class="menu">
                 <a href="index.html" target="_blank">Home</a>
                 <a href="about.html" target="_blank">About</a>
