--- a/index.html
+++ b/index.html
@@ -22,18 +22,101 @@
             </div>
         </div>
     </header>
+ <!-- My Details Page -->
 
-    <div class="container">
-        <h1>Welcome to Shahanur's Dairy</h1>
-
-        <div class="main-content">
-            <img class="profile" src="shahanur.jpg" alt="Shahanur Alam" title="Nur">
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam eget turpis ut nulla posuere aliquet.
-                Sed vitae consectetur mi. Proin vestibulum fermentum orci, vel malesuada libero cursus ut.
-            </p>
+    <div class="myDetails">
+        <div class="details">
+            <h3>It's Me</h3> <br>
+            <h1><strong>Shahanur Alam</strong></h1> <br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.Optio asperiores sed vel accusantium earum
+                explicabo?</p> <br>
+            <button type="button">Discover Now</button>
+        </div>
+        <div class="profile">
+            <img src="ShahanurAlam.jpg" alt="Shahanur ALam">
         </div>
     </div>
+
+
+
+
+
+
+
+    <!-- About Page  -->
+    <div class="aboutMe">
+        <h1 class="about">About Me </h1>
+        <p class="aboutDetails">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae hic temporibus et veniam, nobis excepturi
+            facere iure repellat suscipit modi non officia est rem accusamus dolorem ut numquam vero aliquid. Expedita,
+            reprehenderit repellendus eos ducimus pariatur quo quas consectetur iusto vel debitis veniam dolore error
+            recusandae doloremque doloribus illo. Suscipit, quasi sunt aperiam sequi at adipisci accusantium nesciunt
+            voluptate facere soluta quaerat autem natus, quod, non id. Reprehenderit maiores voluptatibus asperiores?
+            Consectetur voluptatum, maiores doloremque nesciunt labore, nisi perferendis quo sapiente asperiores cum
+            quia qui porro ab. Veritatis, enim. Nihil ullam magnam quidem necessitatibus quam sunt fuga aspernatur,
+            mollitia minima delectus molestias autem facilis cumque minus voluptates officiis rem quas alias fugit,
+            dicta, provident incidunt eveniet cupiditate. Sint modi beatae voluptates vel totam in nulla nesciunt dicta
+            impedit soluta nam nihil, quibusdam ex eaque accusamus fuga repellendus sed non quo explicabo dignissimos
+            odio deleniti, odit dolorum. Inventore numquam quisquam voluptas corrupti fuga culpa velit voluptatum
+            mollitia, ad magnam aliquid reprehenderit iste odio sed quod fugit nam ipsum! Similique cumque perferendis
+            dolorum nemo ipsum natus laudantium, hic sapiente quae eos illo magni corporis reiciendis inventore maxime a
+            quidem optio soluta eaque minus, labore quibusdam molestiae necessitatibus! Recusandae quia tempora facilis
+            iure ea. Nesciunt explicabo neque unde iure expedita quidem corrupti nisi quam delectus sapiente harum
+            voluptates aut qui officiis laboriosam consequatur illo odit quo, minima doloremque voluptatum. Commodi id
+            vero eius facilis! Tempora incidunt itaque perferendis laudantium placeat accusamus molestias, consequatur
+            mollitia. Excepturi magni iste dolore velit quos, ea adipisci aliquam.</p>
+    </div>
+
+    <!-- Skills Section -->
+<div class="skills">
+    <h1 class="skillsTitle">Skills</h1>
+    <div class="skillsContainer">
+        <div class="skill">
+            <h3>HTML</h3>
+            <div class="skillBar">
+                <div class="skillLevel" style="width: 90%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>CSS</h3>
+            <div class="skillBar">
+                <div class="skillLevel" style="width: 85%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>PHP</h3>
+            <div class="skillBar">
+                <div class="skillLevel" style="width: 75%;"></div>
+            </div>
+        </div>
+        <div class="skill">
+            <h3>App Deveolper</h3>
+            <div class="skillBar">
+                <div class="skillLevel" style="width: 75%;"></div>
+            </div>
+        </div>
+        
+    </div>
+</div>
+
+<!-- Contact Form Section -->
+<div class="contactForm">
+    <h1>Contact Me</h1>
+    <form action="">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</div>
+
+<!-- Social Media Links -->
+<div class="socialMedia">
+    <a href="https://github.com/shahanuralamofficial" target="_blank">GitHub</a>
+    <a href="https://www.facebook.com/ShahanurAlamOfficial.Me" target="_blank">FaceBook</a>
+    <a href="https://www.linkedin.com/in/shahanur-alam/" target="_blank">LinkedIn</a>
+</div>
+
+
 </body>
 
 </html>
