--- a/index.html
+++ b/index.html
@@ -4,25 +4,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shahanur's Dairy</title>
+    <title>Personal Portfolio</title>
     <link rel="stylesheet" href="style.css">
+<style>
+
+
+</style>
 </head>
+
 
 <body>
 
-    <header>
-        <div class="container clearfix">
-            <div class="logo"><img src="logo.png" alt="Shahanur Alam"></div>
-            <div class="menu">
-                <a href="index.html" target="_blank">Home</a>
-                <a href="about.html" target="_blank">About</a>
-                <a href="contact.html" target="_blank">Contact</a>
-                <a href="login.html" target="_blank">Log In</a>
-                <a href="signup.html" target="_blank">Sign Up</a>
-            </div>
-        </div>
-    </header>
- <!-- My Details Page -->
+    <!-- Navigation Bar Start -->
+    <div class="navDiv">
+        <nav>
+            <div class="logo">ShahanurAlam</div>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Services</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contract</a></li>
+            </ul>
+        </nav>
+    </div>
+
+
+
+    
+    <!-- My Details Page -->
 
     <div class="myDetails">
         <div class="details">
