--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="logo">ShahanurAlam</div>
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="about.html" target="_blank" >About</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
