--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <li><a href="about.html" target="_blank" >About</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Blog</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="login.html">Log In</a></li>
-                <li><a href="signup.html">Sign Up</a></li>
+                <li><a href="contact.html" target="_blank">Contact</a></li>
+                <li><a href="login.html" target="_blank">Log In</a></li>
+                <li><a href="signup.html" target="_blank">Sign Up</a></li>
             </ul>
         </nav>
     </div>
