--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Md. Shahanur Alam — Portfolio</title>
+    <title>Shahanur Alam</title>
   </head>
   <body class="bg-gray-50">
     <noscript>You need to enable JavaScript to run this app.</noscript>
